objects/Cost_Center_Legal_Entity__c.object
<CustomObject>
    <description>To hold the mapping of Cost Center and Legal Entity. It is One to Many.</description>
    <fields>
        <fullName>Approval_Counter__c</fullName>
        <description>What it Does? Stores the approval counter for that the particular records belongs to.
Downstream Impact? N/A 
Which department is owner? IT</description>
        <label>Approval Counter</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <referenceTo>Cost_Center__c</referenceTo>
        <relationshipLabel>Cost Center Legal Entities</relationshipLabel>
        <relationshipName>Cost_Center_Legal_Entities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Legal_Entity__r.Country__r.ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_ID__c</fullName>
        <formula>Legal_Entity__r.Legal_Entity_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Entity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Name__c</fullName>
        <formula>Legal_Entity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Entity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <referenceTo>Legal_Entity__c</referenceTo>
        <relationshipLabel>Cost Center Legal Entities</relationshipLabel>
        <relationshipName>Cost_Center_Legal_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Locked__c</fullName>
        <formula>IF( Cost_Center__r.Last_Approved_Date__c &lt;= CreatedDate || ISNULL(Cost_Center__r.Last_Approved_Date__c), false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Legal_Entity__r.Business_Region__r.Region_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X18_Digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit ID</label>
        <type>Text</type>
    </fields>
    <label>Cost Center Legal Entity</label>
    <nameField>
        <displayFormat>CCLE-{0000}</displayFormat>
        <label>Relationship ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cost Center Legal Entities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>